# RAG_project

./: .gitignore  README.md  chat.py  errors.py  events.py  extract_structured_data.py  global_settings.py  main.py  pyproject.toml  rag_service.py  rag_workflow.html  requirements.txt  workflow.py
app/: chat.py
config/: rag_config.py  route_config.py
data/: extract_structured_data.py  load_data.py  structured_data.json
docs/: codex.md  copilot.md
domain/: workflow.py
services/: rag_service.py
tests/: test_chat.py  test_workflow.py
workflow_visualizations/: last_execution.html  rag_workflow.html
